B-F Sandbox Full-Backup/src/objects/Product__c.object
<CustomObject>
    <description>NPA Rollout: Object for storing Products used in National Promotion application.
Product Remediation : Replicated all standard product fields here.</description>
    <fields>
        <fullName>Bar_Code__c</fullName>
        <description>Bar Code</description>
        <label>Bar Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <description>INFOWELDERS</description>
        <label>Brand Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders, NPA Rollout: Used to store the related Brand</description>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carton_Qty__c</fullName>
        <label>Carton Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Multiplier__c</fullName>
        <description>Created as a part of product remediation</description>
        <label>Case Multiplier</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>1015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00-Non-Taxable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B0-Beer/Malt Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-In-Transit Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0-Spirits x&gt;24%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1-Spirits 10&lt;x&lt;=24%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2-Spirits 6&lt;x&lt;=10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3-Spirits x=6%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4-Spirits 2&lt;x&lt;6%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5-Spirits x&lt;=2%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W0-Wines x&gt;24%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W1-Wines 21&lt;x&lt;=24%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W2-Wines 16&lt;x&lt;=21%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W3-Wines 14&lt;x&lt;=16%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W4-Wines 7&lt;x&lt;=14%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W5-Wines x&lt;=7%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W6-Wines Art. Sparkling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W7-Wines Nat. Sparkling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X0-Cognac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X1-Gin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X2-Liqueur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X3-Raki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X4-Rum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X5-Tequila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X6-Vodka</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Created as a part of product remediation</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>Type of Beverage</description>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Spirit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRE-MIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00 - Non-Alcoholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 - Distilled Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Wines &lt;=14%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Wines 14 &lt; x &lt;= 21%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - Wines 21 &lt; x &lt;= 24%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - Wines x &gt; 24%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - Wines (Artif Carb)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - Wines (Sparkling)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - Beer/Malt Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 - Pre-Mix (BFA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - In-Transit Material</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competes_On_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INFOWELDERS - Brand that a competitor product competes against.</description>
        <label>Competes On (Brand)</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>ProductCompete</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPL_Family__c</fullName>
        <label>IPL Family</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Wombat_Product__c</fullName>
        <defaultValue>true</defaultValue>
        <description>BFA - Check is active</description>
        <label>Is Wombat Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Layer_Per_Pallet__c</fullName>
        <label>Layer Per Pallet</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Layer_Qty__c</fullName>
        <label>Layer Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Brand_Code__c</fullName>
        <formula>Brand__r.Legacy_Brand_Code_AU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Created as a part of product remediation</description>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NPA Rollout: Used to mark products which are to be made unavailable in the system</description>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <formula>Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of product remediation</description>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>ProductsCustom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Type__c</fullName>
        <description>NPA Rollout: Material Type from the general product master</description>
        <label>Material Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack_Quantity__c</fullName>
        <label>Pack Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Quantity__c</fullName>
        <label>Pallet Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Cost__c</fullName>
        <description>NPA Rollout: Used to store Planned Cost of Products</description>
        <label>Planned Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Material_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Material Group</label>
        <referenceTo>Reference_Material_Group__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Reference_Material__c</fullName>
        <label>Price Ref Material</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>NPA Rollout: Used to store the product code of the POS item.</description>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>BOURBON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRANDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHAMPAGNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COGNAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIQUEURS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MERCHANDISING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUZO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRE-MIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPARKLING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPIRITS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEQUILA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIA LUSSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VERMOUTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VODKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHISKY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>NPA Rollout: Stores the product code</description>
        <label>Product Unique Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Number__c</fullName>
        <label>SAP Material Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>NPA Rollout: Stores the Sales Org for which the Product will be available</description>
        <label>Sales Org</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Created as a part of product remediation</description>
        <inlineHelpText>This sort order will specify in which order products are listed in outlet visit screens.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>NPA Rollout: Used to store status of Product
0 = Active
1 = Cancelled</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <description>Created as a part of product remediation</description>
        <formula>Brand__r.Supplier__r.Name</formula>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>NPA Rollout: Stores the Unit of Measure for the product</description>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>PAK - Pack</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EA - Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAD - Pad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAR - Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIT - Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHT - Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC	 - Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ - Dozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROL - Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SET	 - Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAG - Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAA - Pair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <description>**Not Used** NPA Rollout:</description>
        <label>Unit/Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Size__c</fullName>
        <label>Unit Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <description>Created as a part of product remediation</description>
        <inlineHelpText>VAT for this product in this  market. Do not enter a value if VAT does not apply.</inlineHelpText>
        <label>VAT</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wholesale_Price__c</fullName>
        <description>Wholesale Price</description>
        <label>Wholesale Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Number__c</fullName>
        <label>Wholesaler Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>Australia_Products</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Is_Wombat_Product__c</columns>
        <columns>ProductCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>Australia Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Australia_Wet_Goods</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product__c.Wet_Goods</value>
        </filters>
        <label>Australia (Wet Goods)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Australia_Wet_Goods_ECC</fullName>
        <columns>NAME</columns>
        <columns>Price_Material_Group__c</columns>
        <columns>Pricing_Reference_Material__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>startsWith</operation>
            <value>Sandeep</value>
        </filters>
        <label>Australia (Wet Goods - ECC)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_Wet_Goods</fullName>
        <columns>Market__c</columns>
        <columns>IsActive__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Code__c</columns>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Case_Multiplier__c</columns>
        <columns>Competes_On_Brand__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>China Products</label>
        <language>en_US</language>
        <sharedTo>
            <group>CHN-Mangers</group>
            <role>Global Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEU_Wet_Goods</fullName>
        <columns>NAME</columns>
        <columns>Sort_Order__c</columns>
        <columns>IsActive__c</columns>
        <columns>ProductCode__c</columns>
        <columns>Market__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Code__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product__c.Wet_Goods</value>
        </filters>
        <filters>
            <field>Brand_Code__c</field>
            <operation>equals</operation>
            <value>380</value>
        </filters>
        <label>DEU - Wet Goods</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEU_Wet_Goods_Active</fullName>
        <columns>NAME</columns>
        <columns>Sort_Order__c</columns>
        <columns>IsActive__c</columns>
        <columns>ProductCode__c</columns>
        <columns>Market__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Code__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product__c.Wet_Goods</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DEU - Wet Goods (Active)</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>India_Dry_Goods</fullName>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>Description__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product__c.Dry_Goods</value>
        </filters>
        <label>India (Dry Goods)</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <role>INR-Brand Manager</role>
            <role>INR-Finance Manager</role>
            <role>INR-Market Manager/Admin</role>
            <role>INR-Sales Manager</role>
            <role>INR-Sales Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>India_Wet_Goods</fullName>
        <columns>Market__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>ProductCode__c</columns>
        <columns>Description__c</columns>
        <columns>Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product__c.Wet_Goods</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>India (Wet Goods)</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <role>INR-Brand Manager</role>
            <role>INR-Finance Manager</role>
            <role>INR-Market Manager/Admin</role>
            <role>INR-Sales Manager</role>
            <role>INR-Sales Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JPN_Wet_Goods</fullName>
        <columns>Sort_Order__c</columns>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>Description__c</columns>
        <columns>Family__c</columns>
        <columns>Supplier__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Competes_On_Brand__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product__c.Wet_Goods</value>
        </filters>
        <label>JPN - Wet Goods</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KOR_Products</fullName>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>Description__c</columns>
        <columns>Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Korea</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>KOR Products</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <role>KOR-Market Manager/Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KOR_WET_BF</fullName>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>Description__c</columns>
        <columns>Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>KOREA</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product__c.Wet_Goods</value>
        </filters>
        <filters>
            <field>Supplier__c</field>
            <operation>equals</operation>
            <value>B-F</value>
        </filters>
        <label>KOR WET BF</label>
        <language>ko</language>
        <sharedTo>
            <role>Global Administrator</role>
            <roleAndSubordinates>KOR-Market Manager/Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kor_Dry</fullName>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>Description__c</columns>
        <columns>Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Korea</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product__c.Dry_Goods</value>
        </filters>
        <label>Kor Dry</label>
        <language>ko</language>
        <sharedTo>
            <role>Global Administrator</role>
            <roleAndSubordinates>KOR-Market Manager/Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kor_Wet</fullName>
        <columns>NAME</columns>
        <columns>ProductCode__c</columns>
        <columns>Description__c</columns>
        <columns>Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Korea</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product__c.Wet_Goods</value>
        </filters>
        <label>Kor Wet</label>
        <language>ko</language>
        <sharedTo>
            <role>Global Administrator</role>
            <roleAndSubordinates>KOR-Market Manager/Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>POS_Products</fullName>
        <columns>Sales_Org__c</columns>
        <columns>ProductCode__c</columns>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Planned_Cost__c</columns>
        <columns>Supplier__c</columns>
        <columns>Mark_for_Deletion__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UOM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Product__c.POS_US</value>
        </filters>
        <label>POS Products</label>
        <language>en_US</language>
        <sharedTo>
            <group>NPA Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Taiwan_Products</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Sort_Order__c</columns>
        <columns>Brand__c</columns>
        <columns>NAME</columns>
        <columns>Competes_On_Brand__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Case_Multiplier__c</columns>
        <columns>IsActive__c</columns>
        <columns>Market__c</columns>
        <columns>ProductCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Taiwan</value>
        </filters>
        <label>Taiwan Products</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>TWN-Market Manager/Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I300000017OkOEAU_00N300000084WlFEAU</fullName>
        <active>true</active>
        <field>Promotion_Result__c.Custom_Product__c</field>
        <filterItems>
            <field>Product__c.Market__r.Name</field>
            <operation>equals</operation>
            <valueField>$User.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Promotion Result_Product</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I300000017Op0EAE_00N300000084WlCEAU</fullName>
        <active>true</active>
        <field>Promotion_Goal__c.Custom_Product__c</field>
        <filterItems>
            <field>Product__c.Market__r.Name</field>
            <operation>equals</operation>
            <valueField>$User.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Promotion Goal_Product</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IV00000004PiqMAE_00NV0000000Kod4MAC</fullName>
        <active>true</active>
        <field>Order_Item__c.Product__c</field>
        <filterItems>
            <field>Product__c.Brand__c</field>
            <operation>equals</operation>
            <valueField>$Source.Brand__c</valueField>
        </filterItems>
        <filterItems>
            <field>Product__c.Market__r.Name</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Order Item_Product</name>
        <sourceObject>Order_Item__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IV00000004U52MAE_00NV0000000LqrRMAS</fullName>
        <active>true</active>
        <field>Group_Promotion_Item__c.Product__c</field>
        <filterItems>
            <field>Product__c.Market__r.Name</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Group Promotion Item_Product</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IV0000000ClVjMAK_00NV0000000Sjj8MAC</fullName>
        <active>true</active>
        <field>Product_Launch__c.Product__c</field>
        <filterItems>
            <field>$User.Market__c</field>
            <operation>equals</operation>
            <valueField>Product__c.Market__r.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Product Launch_Product</name>
    </namedFilters>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>Dry_Goods</fullName>
        <active>true</active>
        <label>Dry Goods</label>
    </recordTypes>
    <recordTypes>
        <fullName>POS_US</fullName>
        <active>true</active>
        <label>POS - US</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wet_Goods</fullName>
        <active>true</active>
        <label>Wet Goods</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>